<resources>

    <!--creatorbe-->
    <!--https://asrt.gluege.boerde.de-->
    <string name="app_name" translatable="false">WoohFresh</string>

    <!--drawer-->
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="openDrawer" translatable="false">open_drawer</string>
    <string name="closeDrawer" translatable="false">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_fruits">Fruits</string>
    <string name="nav_recipes">Recipes</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Fruits</item>
        <item>Recipes</item>
        <item>Settings</item>
    </string-array>

    <string-array name="lang_select">
        <item>English</item>
        <item>Indonesian</item>
    </string-array>

    <string-array name="arr_profile_state">
        <item>@string/profile_prompt_state</item>
    </string-array>

    <string-array name="arr_settings_title">
        <item>@string/set_lang_title</item>
        <item>@string/set_exit_t</item>
    </string-array>
    <string-array name="arr_settings_sub">
        <item>@string/set_lang_desc</item>
        <item>@string/set_exit_s</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="privacy_policy">Privacy Policy</string>

    <!--signin-->
    <string name="err_signin_password">Password mismatch</string>

    <!--setting-->
    <string name="setting_lang">Choose Language</string>
    <string name="setting_lang_change">Change</string>
    <string name="setting_cancel">Cancel</string>
    <string name="set_lang_title">Language</string>
    <string name="set_lang_desc">Change app language</string>
    <string name="set_exit_t">Exit</string>
    <string name="set_exit_s">Log out account</string>

    <string name="tv_style_app_title" translatable="false"><![CDATA[<font color=#dd2c00>wooh</font><font color=#FFFFFF>fresh</font>]]></string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="login">Log In</string>
    <string name="login_option">or login with</string>
    <string name="login_forgot_password">Forgot Password</string>
    <string name="login_email">Email / Cell Phone Number</string>
    <string name="login_password">Password</string>
    <string name="login_password_re">Re-type password</string>
    <string name="login_no_acc"><![CDATA[Does not have an account <font color=#0D9D59><b>SIGN UP</b></font> now]]></string>
    <string name="login_no_acc_in" translatable="false"><![CDATA[Tidak punya akun <font color=#0D9D59><b>DAFTAR</b></font> sekarang]]></string>

    <string name="signup">Register</string>
    <string name="signup_term"><![CDATA[By signing up, you agree to our <font color=#0D9D59>Term</font> and <font color=#0D9D59>Privacy Policy</font>]]></string>
    <string name="signup_term_in" translatable="false"><![CDATA[Dengan mendaftar, anda setuju dengan <font color=#0D9D59>Term</font> dan <font color=#0D9D59>Privacy Policy</font>]]> kami</string>
    <string name="signup_success">Thank you for registering!</string>
    <string name="signup_success_tag">A confirmation has been sent to your registered email address.\nPlease check our email in your mailbox and follow the\ninstruction to activate your account.</string>

    <string name="err_server">Connection failed</string>
    <string name="err_blank">Please fill the field</string>

    <!--profile edit-->
    <string name="profile_fullname">Full Name</string>
    <string name="profile_gender">Gender</string>
    <string name="profile_dob">Date of Birth</string>
    <string name="profile_phone">Cell Phone Number</string>
    <string name="profile_email">Email</string>
    <string name="profile_password">Password</string>
    <string name="profile_password_re">Re-type Password</string>
    <string name="profile_state">Pick your state</string>
    <string name="profile_city">Pick your city</string>
    <string name="profile_subdistrict">Pick your subdistrict</string>
    <string name="profile_address">Address details</string>
    <string name="profile_female">Female</string>
    <string name="profile_male">Male</string>

    <!--home menu-->
    <string name="home_menu_recipes">Recipes</string>
    <string name="home_menu_shop">Shop</string>
    <string name="home_menu_price">Special Price</string>
    <string name="home_menu_new">New</string>

    <!--action-->
    <string name="act_save">Save</string>
    <string name="act_clear">Clear</string>
    <string name="act_ok">Ok</string>

    <!--dummy-->
    <string name="dev" translatable="false"><![CDATA[<b><font color=#d50000>&lt;/</font><font color=#64dd17>dev</font><font color=#d50000>></font></b>]]></string>

    <string name="profile_prompt_state">Choose a state</string>
    <string name="profile_prompt_city">Choose a city</string>
    <string name="profile_prompt_subdistrict">Choose a subdistrict</string>

    <!--search-->
    <string name="search_tag">Looking for something ?</string>
    <string name="search_type1">Products</string>
    <string name="search_type2">Recipes</string>
    <string name="search_list_title">Recent Search List</string>

    <!--proddet-->
    <string name="s_proddet_key">Key Information</string>
    <string name="s_proddet_about">About The Product</string>
    <string name="s_proddet_handling">Handling and Delivery</string>
    <string name="s_proddet_nuts">Nutrition Fact</string>
    <string name="s_proddet_err_no_stateid">Cant get product, no state id</string>

    <!--info-->
    <string name="info_msg_exit">Are you sure to exit app ?</string>
    <string name="info_msg_del_recipes">Yakin hapus resep ?</string>

    <string-array name="arr_filter">
        <item>All Categories</item>
        <item>Subcategories</item>
        <item>Current Location</item>
    </string-array>

</resources>
