<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPreWhite"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrolView_account"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:focusable="true">


        <RelativeLayout
            android:id="@+id/linear_account"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="100dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="100dp"
                    android:layout_marginRight="10dp"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/tvProfileName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/profile_fullname"
                            android:imeOptions="actionNext"
                            android:inputType="textPersonName" />

                    </android.support.design.widget.TextInputLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/profile_gender" />

                    <RadioGroup
                        android:id="@+id/radioSex"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/rbMale"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/profile_male" />

                        <RadioButton
                            android:id="@+id/rbFemale"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/profile_female" />

                    </RadioGroup>

                    <!--<TextView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="@string/profile_dob"/>-->

                    <EditText
                        android:id="@+id/etProfileDob"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:editable="false"
                        android:hint="@string/profile_dob"
                        android:imeOptions="actionNext" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/etProfilePhone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/profile_phone"
                            android:imeOptions="actionNext"
                            android:inputType="phone" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/tvProfileEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/profile_email"
                            android:imeOptions="actionNext"
                            android:inputType="textEmailAddress" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/etProfilePassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/login_password"
                            android:imeOptions="actionNext"
                            android:inputType="textPassword" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/etProfileRePassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/login_password_re"
                            android:imeOptions="actionNext"
                            android:inputType="textPassword" />

                    </android.support.design.widget.TextInputLayout>

                    <!--region id-->
                    <EditText
                        android:visibility="gone"
                        android:inputType="number"
                        android:id="@+id/etStateId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <EditText
                        android:visibility="gone"
                        android:inputType="number"
                        android:id="@+id/etCityId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <EditText
                        android:visibility="gone"
                        android:inputType="number"
                        android:id="@+id/etSubId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/profile_state" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_spinner_region">

                        <Spinner
                            android:id="@+id/profileSpStateStatic"
                            style="@style/mySpinnerState"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:entries="@array/arr_profile_state" />

                        <Spinner
                            android:id="@+id/profileSpState"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:visibility="gone" />
                    </RelativeLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/profile_city" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_spinner_region">

                        <Spinner
                            android:id="@+id/profileSpCity"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </RelativeLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/profile_subdistrict" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_spinner_region">

                        <Spinner
                            android:id="@+id/profileSpSubdistrict"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </RelativeLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/profile_address" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/bg_spinner_region">

                        <EditText
                            android:id="@+id/etProfileAddress"
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            android:background="@android:color/white"
                            android:gravity="top"
                            android:inputType="text|textMultiLine" />
                    </RelativeLayout>

                </LinearLayout>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btnSave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:text="@string/act_save"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true">

                <ImageView
                    android:id="@+id/ivProfile"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fab_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@+id/ivProfile"
                    android:layout_alignRight="@+id/ivProfile"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/drawableleft_edit" />

            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>